k8s/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: k8s-workspace
spec:
  selector:
    matchLabels:
      app: mongo-express-deployment
  template:
    metadata:
      labels:
        app: mongo-express-deployment
    spec:
      containers:
      - name: mongo-express-deployment
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: k8s-workspace
spec:
  selector:
    app: mongo-express-deployment
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 31000
