k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: k8s-workspace
spec:
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
      - name: mongodb-deployment
        image: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: k8s-workspace
spec:
  selector:
    app: mongodb-deployment
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
